# roguecord

./: .aiignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: tauri-client-build.yml
client/: .gitignore  FORCE_BUILD  README.md  index.html  package-lock.json  package.json  vite.config.ts
client/public/svg/: index.json
client/src/: main.ts  style.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/crates/tauri-plugin-audio-loopback/: Cargo.toml  build.rs
client/src-tauri/crates/tauri-plugin-audio-loopback/permissions/: allow-list-devices.toml  allow-start.toml  allow-stats.toml  allow-stop.toml  default.toml
client/src-tauri/crates/tauri-plugin-audio-loopback/src/: capture.rs  commands.rs  encode.rs  error.rs  lib.rs  resample.rs  session.rs  types.rs
client/src-tauri/icons/: README.md
client/src-tauri/src/: lib.rs  main.rs
client/src/audio/systemLoopback/: README.md  decoder.worker.ts  featureDetect.ts  index.ts  tauriBridge.ts  trackGenerator.ts  types.ts
client/src/components/branding/: RougeCordMark.vue
client/src/components/chat/: MessageAttachmentVideoPlayer.vue
client/src/directives/: twemoji.ts
client/src/layouts/: MainLayout.vue
client/src/router/: index.ts
client/src/stores/: chat.ts  webrtc.ts
client/src/types/: index.d.ts
client/src/utils/: avatarStorage.ts  emojiPrewarm.ts  flagEmoji.ts  isTauri.ts  openExternalUrl.ts  serverIconCache.ts
client/src/views/: HomeView.vue
client/tauri/: Cargo.toml  tauri.conf.json
client/tauri/capabilities/: default.json
client/tauri/icons/: icon.icns
client/tauri/src/: main.rs
docs/: system-audio-loopback-design.md
server/: .env.example  .gitignore  package-lock.json  package.json  tsc_output.txt  tsconfig.json
server/data/: roguecord.db
server/src/: admin.ts  db.ts  index.ts  mediasoup.ts  rssDedup.ts  rssPolling.ts  uploads.ts
server/src/messages/: embeds.ts
server/src/models/: index.ts
server/src/storage/: s3Storage.ts  userAvatarStorage.ts
server/src/ws/: connectionManager.ts  handlers.ts
(+12 files in other folders)
