[package]
name = "roguecord"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "RogueCord Tauri desktop shell."
license = "MIT OR Apache-2.0"
default-run = "roguecord"

[lib]
name = "roguecord_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "roguecord"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
tauri = { version = "2.3", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-audio-loopback = { path = "crates/tauri-plugin-audio-loopback" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
