[package]
name = "roguecord-client"
version = "0.0.0"
description = "Roguecord desktop client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
