[package]
name = "tauri-plugin-audio-loopback"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "WASAPI system-audio loopback capture + Opus encoding plugin for Tauri v2."
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]

[build-dependencies]
tauri-plugin = { version = "2.3", features = ["build"] }

[dependencies]
tauri = { version = "2.3", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.69"
tracing = "0.1.41"
parking_lot = "0.12.3"
ringbuf = "0.4.7"
rubato = "0.15.0"
audiopus = "0.3.0-rc.0"
once_cell = "1.20.2"
crossbeam-channel = "0.5.13"

[target.'cfg(windows)'.dependencies]
wasapi = "0.17.0"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
] }

[features]
default = []
